Revision history for Perl extension Riji

{{$NEXT}}

v0.4.2 2015-01-08T07:20:32Z

    - explicitly defined Riji->base_dir which is current directory
    - [bugfix] skip scanning mailto: links in publish phase
    - suppress exception in publish phase

v0.4.1 2015-01-07T09:43:50Z

    - [bunfix] Fix wrong date format in Atom (hitode909++)
    - it is enough just to use URI->new_abs so remove deps Path::Canonical

v0.4.0 2015-01-03T15:43:38Z

    - `git publish` is prohibited only when `entry_dir` is dirty index, not all files in repository
    - [Experimental] entry directory can have subdirectories now

v0.3.2 2015-01-02T15:41:48Z

    - riji setup now generates .gitignore and cpanfile
    - depend on Path::Canonical
    - announce --force option when `riji publish` failed

v0.3.1 2015-01-02T07:34:52Z

    - [bugfix] care relative links

v0.3.0 2015-01-01T18:53:51Z

    - depends on Puncheur v0.3.0 or later
    - remove urgency replacing urls processes
    - add Riji::CLI::Publish::Scanner
    - fix Article#site_path and remove Entry#site_path
    - move `url` from Entry to Article.

v0.2.0 2014-12-26T06:39:52Z

    - [Experimental][feature] riji publish --force (trapple++)
    - change version declaration way

0.1.3 2014-08-06T10:15:59Z

    - `git symbolic-ref --short` is available after git 1.7.10, so care older version when publishing.

0.1.2 2014-08-06T08:51:04Z

    - stable sort order of Blog::tags()

0.1.1 2014-05-23T10:50:25Z

    - create dir unless article/entry (monmon++)

0.1.0 2014-05-17T08:17:13Z

    - depends on Puncheur 0.1.0

0.0.14 2014-05-06T04:29:06Z

    - [bugfix] Set more exact repository path if when `base_dir` is different from `repo_dir` (karupanerura)

0.0.13 2014-01-12T03:43:21Z

    - [bugfix] riji publish failed in some Operating systems which has case-sensitive filesystem (tsucchi)

0.0.12 2013-12-30T05:41:44Z

    - add repository status checks when `riji publish`

0.0.11 2013-10-08T17:05:49Z
